02-app-from-yaml-manifests/ingress.yaml
---
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: sample-ingress
    annotations:
      kubernetes.io/ingress.class: nginx
  spec:
    rules:
    # change host as per your ingress
    - host: app.dev.vemessage.local
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: sample-service
              port: 
                number: 80
